--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>Aquí va el Post</h1>
-    <p>Aquí va a ir el post una vez lo tengamos escrito</p>
+    <div id="container">
+    <div id="post">
+    <h1>Este es el títulos ineresante y atractivo del post</h1>
+    <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increÃ©ibles que se pueden hacer con ramas</p>
 </body>
 </html>
