--- a/blogpost.html
+++ b/blogpost.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
     <div id="post">
     <h1>Este es el títulos ineresante y atractivo del post</h1>
     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increÃ©ibles que se pueden hacer con ramas</p>
+    </div>
+</div>
+</div>
 </body>
 </html>
