--- a/blogpost.html
+++ b/blogpost.html
@@ -12,5 +12,7 @@
     <div id="post">
     <h1>Este es el títulos ineresante y atractivo del post</h1>
     <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increÃ©ibles que se pueden hacer con ramas</p>
+    </div>
+    </div>
 </body>
 </html>
