--- a/blogpost.html
+++ b/blogpost.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aquí va el Post</title>
+    <title>Bienvenido</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Bienvenido</span>
+            <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Este es el tÃ­tulo atractivo e interesante del post</h1>
