--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el párrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
-            <p><img src="imagenes/Estrellas.jpg" alt=" "></p>
+            <p><img src="https://i.pinimg.com/564x/cc/0b/c7/cc0bc78e9ba91288e88d53780d9180c6.jpg" alt=" "></p>
             <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadí­sticamente no lo eres.... por ahora.</p>
             <p>Dale Like y Suscribete</p>
         </div>
